--- a/simi-home/package.json
+++ b/simi-home/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "apollo-client": "~2.6.8",
+    "node-sass": "~4.13.1",
     "react-helmet": "~5.2.1",
     "react-html-parser": "~2.0.2",
     "react-lazyload": "~2.6.6",
