--- a/simi-home/.env
+++ b/simi-home/.env
@@ -16,7 +16,7 @@
 #### Connecting to a Magento store #############################################
 #
 #   Connect to an instance of Magento 2.3 by specifying its public domain name.
-MAGENTO_BACKEND_URL=http://127.0.0.1:8888/pwa/
+MAGENTO_BACKEND_URL="https://magento.pwa-commerce.com/simi_magento_site/"
 #
 ################################################################################
 
